refacotr: retryable 제거